<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".EditProfileAct">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:background="@drawable/bg_gradient_primary_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat_regular"
                android:lineSpacingExtra="9dp"
                android:text="Edit Profile"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_light"
                android:lineSpacingExtra="9dp"
                android:text="We highly suggest you to\n
use the correct informations"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.462"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />



            <!--View untuk background putih card-->
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">


                <!--VIew Untuk Name-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="110dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/nama_lbl"
                        android:textColor="@color/grayPrimary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/xnama_lengkap"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>
                <!--end view password-->

                <!--VIew Untuk Name-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/bio_lbl"
                        android:textColor="@color/grayPrimary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/xbio"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>
                <!--end view password-->


                <!--Text View Untuk email-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:text="Username"
                        android:textColor="@color/grayPrimary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/xusername"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>
                <!--end view email-->


                <!--Text View Untuk email-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:text="Password"
                        android:textColor="@color/grayPrimary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/xpassword"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>
                <!--end view email-->

                <!--Text View Untuk email-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"

                    android:orientation="vertical">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/email"
                        android:textColor="@color/grayPrimary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/xemail_address"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_input_edit"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>
                <!--end view email-->


            </LinearLayout>
            <!--end background card putih-->
            <View
                android:id="@+id/view4"
                android:layout_width="100dp"
                android:layout_height="96dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="148dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_view_circle_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView

                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/icon_nopic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="155dp"
                android:layout_marginEnd="8dp"
                />

            <com.github.florent37.shapeofview.shapes.CircleView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:shape_circle_borderWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="155dp"
                android:layout_marginEnd="8dp">

                <ImageView
                    android:id="@+id/photo_edit_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/icon_nopic" />

            </com.github.florent37.shapeofview.shapes.CircleView>


            <Button
                android:id="@+id/btn_add_new_photo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="124dp"
                android:background="@drawable/bg_btn_plus"
                android:fontFamily="@font/montserrat_medium"
                android:text="+"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout" />

            <Button
                android:id="@+id/btn_save_profile"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_btn_blue_primary"
                android:fontFamily="@font/montserrat_medium"
                android:text="Save Profile"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <!--Membuat tombol back-->
            <LinearLayout
                android:id="@+id/btn_back"
                android:layout_width="95dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_layout_white"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/btn_continue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="19dp"
                    android:src="@drawable/ic_back" />

            </LinearLayout>
            <!--end layout tombol back-->
        </android.support.constraint.ConstraintLayout>


    </ScrollView>




</android.support.constraint.ConstraintLayout>